--- a/src/app/test-series/test-series.component.html
+++ b/src/app/test-series/test-series.component.html
@@ -12,7 +12,7 @@
             </button>
         </div>
         <div class="collapse navbar-collapse pull-right" id="navbar-main">
-            <form method="post" action="https://www.mylearninggraph.com/vendor/b2b-login.php" method="post" enctype="multipart/form-data">
+            <form ngNoForm method="post" action="https://www.mylearninggraph.com/vendor/b2b-login.php" enctype="multipart/form-data">
                 <div class="row">
                     <input type="hidden" name="action" id="action" value="login">
                     <input type="hidden" name="referrer" id="referrer" value="login">
