--- a/src/app/community/community.component.scss
+++ b/src/app/community/community.component.scss
@@ -2,8 +2,8 @@
     background-color: #1756BD;
     padding-top: 32px;
     padding-bottom: 30px;
-    padding-left: 18%;
-    padding-right: 18%;
+    // padding-left: 18%;
+    // padding-right: 18%;
     color: #fff;
     font-family: "Noto Sans JP", sans-serif;
 }
