--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <div class="toolbar-buttons">
                 <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section" class="navbar_button" mat-button>About Us</a>
                 <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="courses-section" class="navbar_button" mat-button>Courses</a>
-                <a class="navbar_button" [routerLink]="['/test-series']" mat-button>Online Test</a>
+                <a target="_blank" class="navbar_button" [routerLink]="['/test-series']" mat-button>Online Test</a>
                 <a class="navbar_button" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" mat-button>Youtube</a>
                 <a pageScroll [pageScrollDuration]="200" fragment="footer-section" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#contact-section" class="navbar_button" mat-button>Contact Us</a>
             </div>
