--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -10,6 +10,7 @@
 .navbar_button {
     color: #476176;
     text-align: left;
+    text-decoration: none;
 }
 
 .toolbar-contents {
@@ -39,7 +40,7 @@
 
 .logo-img {
     padding-top: 8px;
-    height: 50px;
+    height: 60px;
 }
 
 .toolbar-buttons {
