--- a/src/app/courses/courses-page/courses-page.component.html
+++ b/src/app/courses/courses-page/courses-page.component.html
@@ -62,29 +62,28 @@
                 </div>
                 <div class="highlights" *ngIf=isTS>
                     <ul>Features of Test Series
-                        <li> 30 Chapter wise Chemistry Online Tests based on Exact NEET Pattern</li>
-                        <li> 4 Major Tests which covered complete Chemistry Syllabus for Class 11</li>
-                        <li> 3500+ Chemistry Questions with detailed explanation are based on new pattern of NEET 2022.</li>
-                        <li> 45 Questions are included per chapter in the Chemistry Mock Test.</li>
-                        <li> 80% question are solely based on NCERT. Remaining 20% questions are higher level which are designed to give an edge over other students.</li>
-                        <li> Comparison with topper's score and time taken by him.</li>
-                        <li> Free Chemistry Notes are available with tests series.</li>
-                        <li> Can give test 3 times, helpful in revision.</li>
+                        <li>192 Chapter wise Physics, Chemistry, Biology Online Tests based on Exact NEET Pattern</li>
+                        <li>20 Major Tests which covered complete Chemistry Syllabus for Class 11</li>
+                        <li>3500+ Chemistry Questions with detailed explanation are based on new pattern of NEET 2022.</li>
+                        <li>45 Questions are included per chapter in the Chemistry Mock Test.</li>
+                        <li>80% question are solely based on NCERT. Remaining 20% questions are higher level which are designed to give an edge over other students.</li>
+                        <li>Comparison with topper's score and time taken by him.</li>
+                        <li>Free Chemistry Notes are available with tests series.</li>
                     </ul>
                 </div>
                 <div class="highlights" *ngIf=isTS>
                     <ul>Benifits of Test Series
-                        <li> A unique test series with complete video solution, it helps you gauge your preparation status and better understand the concepts. The video solution will help you find your mistakes and weak concept, in an instant.</li>
-                        <li> Detailed analysis of each and every question is provided in the test series.</li>
-                        <li> The test series is available pan India - you get to compete against students on a national level. An excellent way to assess your preparation.</li>
-                        <li> These are time-bound tests; you learn time management and become more efficient at taking tests.</li>
-                        <li> As the Chemistry test series is available online, it makes for a great fit to your schedule and an excellent revision tool. This is an all-India test series. You get to compete against students across India; an excellent way to
+                        <li>A unique test series with complete video solution, it helps you gauge your preparation status and better understand the concepts. The video solution will help you find your mistakes and weak concept, in an instant.</li>
+                        <li>Detailed analysis of each and every question is provided in the test series.</li>
+                        <li>The test series is available pan India - you get to compete against students on a national level. An excellent way to assess your preparation.</li>
+                        <li>These are time-bound tests; you learn time management and become more efficient at taking tests.</li>
+                        <li>As the Chemistry test series is available online, it makes for a great fit to your schedule and an excellent revision tool. This is an all-India test series. You get to compete against students across India; an excellent way to
                             assess your preparation.</li>
-                        <li> You will learn Tricks & Short Cut method to solve questions in minimum time.</li>
-                        <li> Understand the context & patterns of NEET questions in Detailed VIDEO SOLUTIONS by Slok Sir</li>
-                        <li> Develop the ability to MEMORIZE the formulas along with the concepts used</li>
-                        <li> Will help to eliminate mistakes in the exam & to find your weak points.</li>
-                        <li> Chemistry Tests can be given – Anywhere, Any Device – Mobile, Tablet & Computers.</li>
+                        <li>You will learn Tricks & Short Cut method to solve questions in minimum time.</li>
+                        <li>Understand the context & patterns of NEET questions in Detailed VIDEO SOLUTIONS by Slok Sir(only Chemistry)</li>
+                        <li>Develop the ability to MEMORIZE the formulas along with the concepts used</li>
+                        <li>Will help to eliminate mistakes in the exam & to find your weak points.</li>
+                        <li>Chemistry Tests can be given – Anywhere, Any Device – Mobile, Tablet & Computers.</li>
                     </ul>
                 </div>
 
