--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <a href="https://play.google.com/store/apps/details?id=co.lynde.soyyi" target="_blank" mat-icon-button class="brand-image">
-                <img width="167px" class="img" alt="Neet korner" src="assets/images/get-it-on.png">
+                <img width="120vw" class="img" alt="Neet korner" src="assets/images/get-it-on.png">
             </a>
         </div>
         <div class="ft-main-item">
