--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,6 +11,7 @@
                 <a target="_blank" class="navbar_button" [routerLink]="['/test-series']" mat-button>Online Test</a>
                 <a class="navbar_button" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" mat-button>Youtube</a>
                 <a pageScroll [pageScrollDuration]="200" fragment="footer-section" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#contact-section" class="navbar_button" mat-button>Contact Us</a>
+                <a class="login_button" href="https://web.neetkorner.com/login" mat-button>Login</a>
             </div>
         </div>
 
@@ -25,6 +26,7 @@
             <a (click)="sidenav.toggle()" [routerLink]="['/test-series']" class="navbar_button" mat-button>Online Test</a>
             <a (click)="sidenav.toggle()" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" class="navbar_button" mat-button>Youtube</a>
             <a (click)="sidenav.toggle()" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#contact-section" class="navbar_button" mat-button>Contact Us</a>
+            <a (click)="sidenav.toggle()" class="navbar_button" style="color: #ffffff; background-color:  #1756bd; margin: 5px 5px" href="https://web.neetkorner.com/login" mat-button>Login</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
